# hello16

./: Cargo.toml  Gemfile  WORKSPACE  composer.json  go.mod  module.bazel  pubspec.yaml
apps/web-service/: Cargo.toml
crates/auth-lib/: Cargo.toml
packages100/: Gemfile  WORKSPACE  composer.json  go.mod  pubspec.yaml  requirements.txt
