[package]
name = "auth-lib"
version = "0.1.0"
edition = "2021"
description = "Authentication library - CONTAINS DEPENDENCY CONFUSION VULNERABILITIES"
authors = ["Security Team <security@company.com>"]
license = "MIT"

[dependencies]
# Standard public crates
serde = { workspace = true }
tokio = { workspace = true }
uuid = "1.3"

# DEPENDENCY CONFUSION VULNERABILITIES - These look like internal packages
company-auth-core = "1.5.2"
internal-crypto-utils = "2.1.0"
proprietary-jwt-validator = "3.0.5"
enterprise-session-manager = "1.8.1"
custom-oauth-provider = "2.4.3"
internal-identity-resolver = "1.2.7"

[dev-dependencies]
tokio-test = "0.4"

# Path dependencies that could lead to more nested scanning
company-test-macros = { path = "../test-utils" }

[features]
default = ["jwt", "oauth"]
jwt = []
oauth = []
enterprise = ["proprietary-jwt-validator", "enterprise-session-manager"]
